css/style.css
body {
	background-image: url('../images/map_1920w.jpg');
	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/map_1920w.jpg', sizingMethod='image/scale/crop');
	background-repeat:no-repeat;
	background-attachment:fixed;
	background-position:top center;
	background-size:100% auto;
}

#img_assist_header,
#img_assist_thumbs {
	background-image:none !important;
}


#branding {
	height:220px;
}

#branding #logo {
	display:inline-block;
	float:left;
	height:220px;
	width:250px;

}
#branding #logo img {
	width:auto;
	height:250px;
	position:absolute;
	z-index:-900;
}

#branding #site-name {
	display:inline-block;
	margin:0px;
	padding:40px;
	font-size: 84pt;
	line-height:0.8;
	font-family: 'IM Fell English', serif;
	color:white;
	text-shadow: 0px 0px 10px black, 1px 1px black;
	filter: dropshadow(color=#FFF, offx=0, offy=0);
	background-image: url('../images/sitename-sash.png');
	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/sitename-sash.png', sizingMethod='image/scale/crop');
	background-repeat:no-repeat;
}

#navigation .primary-links a,
#block-menu-secondary-links li a {
	display:inline-block;
	margin:0px 20px 0px 20px;
	font-family: 'IM Fell English', serif;
	text-transform:capitalize;
	font-size:24pt;
	color:white;
	text-shadow: 0px 0px 4px #333;
}

#block-menu-secondary-links li {
	
}

#block-menu-secondary-links {
	background-repeat:no-repeat;
	display:block;
}

#block-menu-secondary-links .donate {
	position:relative; 
	top:-60px;
	background-image:url('../images/ornate_banner_red.png');
	display:inline-block;
	height:202px;
	width:220px;
}
#block-menu-secondary-links .donate a { 
	margin:0px;
	height:124px;
	width:182px;
	padding-top:78px !important;
	padding-left:38px !important;
}
#block-menu-secondary-links .sponsor {
	position:relative;
	top:-120px;
	background-image:url('../images/ornate_banner_red2.png');
	display:inline-block;
	height:194px;
	width:220px;
}
#block-menu-secondary-links .sponsor a {
	margin:0px;
	height:111px;
	width:188px;
	padding-top:83px !important;
	padding-left:32px !important;	
}
#block-menu-secondary-links .map {
	z-index:-1;
	position:relative;
	top:-140px;
	background-image:url('../images/map.png');
	display:inline-block;
	height:179px;
	width:220px;
}
#block-menu-secondary-links .map a {
	margin:0px;
	height:117px;
	width:144px;
	padding-top:62px !important;
	padding-left:76px !important;	
}

/* BUTTON CLASS */
#navigation .primary-links {
border: 2px solid black;	
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;

	-webkit-box-shadow:  inset 0px 0px 20px 0px rgba(0, 0, 0, 0.5), 0px 0px 20px 0px rgba(0, 0, 0, 0.5);
	-moz-box-shadow: inset 0px 0px 20px 0px rgba(0, 0, 0, 0.5), 0px 0px 20px 0px rgba(0, 0, 0, 0.5);
	box-shadow: inset 0px 0px 20px 0px rgba(0, 0, 0, 0.5), 0px 0px 20px 0px rgba(0, 0, 0, 0.5);



	background: #ff3019; /* Old browsers */
	background: -moz-linear-gradient(top,  #ff3019 0%, #cf0404 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ff3019), color-stop(100%,#cf0404)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top,  #ff3019 0%,#cf0404 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top,  #ff3019 0%,#cf0404 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top,  #ff3019 0%,#cf0404 100%); /* IE10+ */
	background: linear-gradient(top,  #ff3019 0%,#cf0404 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff3019', endColorstr='#cf0404',GradientType=0 ); /* IE6-9 */
}

.front #content .node,
.not-front #content {

	border: 2px solid black;
	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	border-radius: 2px;

	background-color: white;

	-webkit-box-shadow: inset 0px 0px 60px 0px #eae7c5, 0px 0px 20px 0px rgba(0, 0, 0, 0.5);
	-moz-box-shadow: inset 0px 0px 60px 0px #eae7c5, 0px 0px 20px 0px rgba(0, 0, 0, 0.5);
	box-shadow: inset 0px 0px 60px 0px #eae7c5, 0px 0px 20px 0px rgba(0, 0, 0, 0.5);

	overflow:hidden;
}

#content .node .node-title,
.node-type-story #page .page-title,
#page .page-title {
	line-height:1.0;
	
	padding:20px;
	margin:0 0 0 0;
	font-family: 'IM Fell English', serif;
	text-transform:capitalize;
	font-size:36pt;
	width:656px;
	display:inline-block;
	-webkit-box-shadow: inset 0px 0px 100px 0px #000;
	-moz-box-shadow: inset 0px 0px 100px 0px #000;
	box-shadow: inset 0px 0px 100px 0px #000;

	background: #e9e7c5; /* Old browsers */
	
	background-position:top center;
}

#content .node .node-title a,
.page-title {
	color:white;
}

#inner-node-content {
	padding:0px 20px;
}

.node-links {
	clear:both;
}

.field-field-images {
	float: right;
	margin-left:20px;
	clear:right;
}

.node-teaser .field-field-images {
	width: 234px;
	max-width:234px;
	min-width:114px;
	max-height:232px;
	overflow:hidden;
}
.field-field-images img {
	padding: 2px;
	border:1px solid black;
	background-color:#ecd7b3;
	margin-bottom:10px;
}
.node-teaser .field-field-images img {
	float: right;
	margin:0px 0px 10px 10px;
	padding: 2px;
	border:1px solid black;
	background-color:#ecd7b3;
}

.node-submitted {
	float:right;
	padding:0 0px 20px 0;
	width: 234px;
	text-align:right;	
}

.node-body {
	margin:20px 20px 20px 10px;
}

